--- a/testsuite/expect/test20.3
+++ b/testsuite/expect/test20.3
@@ -63,6 +63,14 @@ if {$job_id == 0} {
 	fail "qsub failed to submit job"
 }
 
+#
+# Wait for job to start
+#
+if {[wait_for_job $job_id "RUNNING"] != 0} {
+	cancel_job $job_id
+	fail "Waiting for job to start"
+}
+
 set status 1
 spawn $qdel $job_id
 expect {
